--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,24 @@
+@import url("./styles/Form.css");
+@import url("./styles/Home.css");
+@import url("./styles/UsersList.css");
+@import url("./styles/CardUser.css");
+
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: 'Roboto', sans-serif;
+}
+.titulo{
+  height: 10vh;
+  background-color: #bdb2ff;
+  color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  letter-spacing: 5px;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
